cm4all-beng-proxy (0.8.4) unstable; urgency=low

  * python: added missing "Response" import
  * python: resume parsing after deferred call

 --

cm4all-beng-proxy (0.8.3) unstable; urgency=low

  * file-handler: implement If-Range (RFC 2616 14.27)
  * merged release 0.7.42

 -- Max Kellermann <mk@cm4all.com>  Tue, 01 Jun 2010 16:17:13 +0200

cm4all-beng-proxy (0.8.2) unstable; urgency=low

  * cookie-client: verify the cookie path
  * python: use Twisted's logging library
  * python: added a widget registry class
  * merged release 0.7.41

 -- Max Kellermann <mk@cm4all.com>  Wed, 26 May 2010 13:08:16 +0200

cm4all-beng-proxy (0.8.1) unstable; urgency=low

  * http-cache-memcached: delete entity records on POST

 -- Max Kellermann <mk@cm4all.com>  Tue, 18 May 2010 12:21:55 +0200

cm4all-beng-proxy (0.8) unstable; urgency=low

  * istream: added method as_fd() to convert istream to file descriptor
  * fork: support passing stdin istream fd to child process
  * http-cache: discard only matching entries on POST
  * istream-html-escape: escape single and double quote
  * rewrite-uri: escape the result with XML entities

 -- Max Kellermann <mk@cm4all.com>  Thu, 13 May 2010 12:34:46 +0200

cm4all-beng-proxy (0.7.42) unstable; urgency=low

  * fork: check "direct" flag again after buffer flush
  * pool: pool_unref_denotify() remembers the code location
  * sink-{buffer,gstring}: don't invoke callback in abort()
  * async: added another debug flag to verify correctness

 -- Max Kellermann <mk@cm4all.com>  Mon, 31 May 2010 21:15:58 +0200

cm4all-beng-proxy (0.7.41) unstable; urgency=low

  * http-cache: initialize response status and headers on empty body

 -- Max Kellermann <mk@cm4all.com>  Tue, 25 May 2010 16:27:25 +0200

cm4all-beng-proxy (0.7.40) unstable; urgency=low

  * http-cache: fixed NULL pointer dereference when storing empty response
    body in memcached

 -- Max Kellermann <mk@cm4all.com>  Tue, 25 May 2010 15:04:44 +0200
