@@ -2,6 +2,7 @@ cm4all-beng-proxy (0.8.4) unstable; urgency=low
 
   * python: added missing "Response" import
   * python: resume parsing after deferred call
+  * http-client: implement istream method as_fd()
 
  --
 
